26 May 2017: Ralph
	- Added redirect-bogus.patch to contrib directory.

26 May 2017: Wouter
	- Fix #1270: unitauth.c doesn't compile with higher warning level
	  and optimization
	- exec_prefix is by default equal to prefix.
	- printout localzone for duplicate local-zone warnings.

24 May 2017: Wouter
	- authzone cname chain, no rrset duplicates, wildcard doesn't change
	  rrsets added for cname chain.

23 May 2017: Wouter
	- first services/authzone check in, it compiles and reads and writes
	  zonefiles.
	- iana portlist update

22 May 2017: Wouter
	- Fix #1268: SIGSEGV after log_reopen.

18 May 2017: Wouter
	- Fix #1265 to use /bin/kill.
	- Fix #1267: Libunbound validator/val_secalgo.c uses obsolete APIs,
	  and compatibility with BoringSSL.

17 May 2017: Wouter
	- Fix #1265: contrib/unbound.service contains hardcoded path.

17 May 2017: George
	- Use qstate's region for IPSECKEY rrset (ipsecmod).

16 May 2017: George
	- Implemented opportunistic IPsec support module (ipsecmod).
	- Some whitespace fixup.

16 May 2017: Wouter
	- updated dependencies in the makefile.
	- document trust-anchor-signaling in example config file.
	- updated configure, dependencies and flex output.
	- better module memory lookup, fix of unbound-control shm names for
	  module memory printout of statistics.
	- Fix type AVC sldns rrdef.

12 May 2017: Wouter
	- Adjust servfail by iterator to not store in cache when serve-expired
	  is enabled, to avoid overwriting useful information there.
	- Fix queries for nameservers under a stub leaking to the internet.

9 May 2017: Ralph
	- Add 'c' to getopt() in testbound.
	- iana portlist update

8 May 2017: Wouter
	- Fix tcp-mss failure printout text.
	- Set SO_REUSEADDR on outgoing tcp connections to fix the bind before
	  connect limited tcp connections.  With the option tcp connections
	  can share the same source port (for different destinations).

2 May 2017: Ralph
	- Added mesh_add_sub to add detached mesh entries.